add k1 24-28